const Oas = require('../../src');
const petstore = require('@readme/oas-examples/3.0/json/petstore.json');
const petstoreServerVars = require('../__fixtures__/petstore-server-vars.json');

const createOas = (operation, components) => {
  const schema = {
    paths: { '/': { get: operation } },
  };

  if (components) {
    schema.components = components;
  }

  return new Oas(schema);
};

test('it should return with null if there are no parameters', () => {
  expect(createOas({ parameters: [] }).operation('/', 'get').getParametersAsJsonSchema()).toBeNull();
  expect(createOas({}).operation('/', 'get').getParametersAsJsonSchema()).toBeNull();
});

describe('type sorting', () => {
  const operation = {
    parameters: [
      { in: 'path', name: 'path parameter', schema: { type: 'string' } },
      { in: 'query', name: 'query parameter', schema: { type: 'string' } },
      { in: 'header', name: 'header parameter', schema: { type: 'string' } },
      { in: 'cookie', name: 'cookie parameter', schema: { type: 'string' } },
    ],
    requestBody: {
      description: 'Body description',
      content: {},
    },
  };

  it('should return with a json schema for each parameter type (formData instead of body)', () => {
    operation.requestBody.content = {
      'application/x-www-form-urlencoded': {
        schema: {
          type: 'object',
          properties: { a: { type: 'string' } },
        },
      },
    };

    const oas = createOas(operation);
    const jsonschema = oas.operation('/', 'get').getParametersAsJsonSchema();

    expect(jsonschema).toMatchSnapshot();
    expect(
      jsonschema.map(js => {
        return js.type;
      })
    ).toStrictEqual(['path', 'query', 'cookie', 'formData', 'header']);
  });

  it('should return with a json schema for each parameter type (body instead of formData)', () => {
    operation.requestBody.content = {
      'application/json': {
        schema: {
          type: 'object',
          properties: { a: { type: 'string' } },
        },
      },
    };

    const oas = createOas(operation);
    const jsonschema = oas.operation('/', 'get').getParametersAsJsonSchema();

    expect(jsonschema).toMatchSnapshot();
    expect(
      jsonschema.map(js => {
        return js.type;
      })
    ).toStrictEqual(['path', 'query', 'body', 'cookie', 'header']);
  });
});

describe('parameters', () => {
  it('should convert parameters to JSON schema', async () => {
    const oas = new Oas(petstore);
    await oas.dereference();

    const operation = oas.operation('/pet/{petId}', 'delete');
    expect(operation.getParametersAsJsonSchema()).toMatchSnapshot();
  });

  describe('type quirks', () => {
    it('should set a type to `string` if neither `schema` or `current` are present', () => {
      const oas = createOas({
        parameters: [
          {
            name: 'userId',
            in: 'query',
          },
        ],
      });

      const schema = oas.operation('/', 'get').getParametersAsJsonSchema();
      expect(schema[0].schema.properties.userId).toStrictEqual({
        type: 'string',
      });
    });
  });

  describe('`content` support', () => {
    it('should support `content` on parameters', () => {
      const oas = createOas({
        parameters: [
          {
            name: 'userId',
            description: 'Filter the data by userId',
            in: 'query',
            content: { 'application/json': { schema: { type: 'string' } } },
          },
        ],
      });

      const schema = oas.operation('/', 'get').getParametersAsJsonSchema();
      expect(schema[0].schema.properties.userId).toStrictEqual({
        type: 'string',
        description: 'Filter the data by userId',
      });
    });

    it('should prioritize `application/json` if present', () => {
      const oas = createOas({
        parameters: [
          {
            name: 'userId',
            in: 'query',
            content: {
              'application/json': { schema: { type: 'integer' } },
              'application/xml': { schema: { type: 'string' } },
            },
          },
        ],
      });

      const schema = oas.operation('/', 'get').getParametersAsJsonSchema();
      expect(schema[0].schema.properties.userId).toStrictEqual({
        type: 'integer',
      });
    });

    it("should prioritize JSON-like content types if they're present", () => {
      const oas = createOas({
        parameters: [
          {
            name: 'userId',
            in: 'query',
            content: {
              // Though is the first entry here is XML, we should actually use the second instead because it's
              // JSON-like.
              'application/xml': { schema: { type: 'string' } },
              'application/vnd.github.v3.star+json': { schema: { type: 'integer' } },
            },
          },
        ],
      });

      const schema = oas.operation('/', 'get').getParametersAsJsonSchema();
      expect(schema[0].schema.properties.userId).toStrictEqual({
        type: 'integer',
      });
    });

    it('should use the first content type if `application/json` is not present', () => {
      const oas = createOas({
        parameters: [
          {
            name: 'userId',
            in: 'query',
            content: {
              'application/xml': { schema: { type: 'integer' } },
              'text/plain': { schema: { type: 'string' } },
            },
          },
        ],
      });

      const schema = oas.operation('/', 'get').getParametersAsJsonSchema();
      expect(schema[0].schema.properties.userId).toStrictEqual({
        type: 'integer',
      });
    });
  });

  describe('common parameters', () => {
    it('should override path-level parameters on the operation level', () => {
      const oas = new Oas({
        paths: {
          '/pet/{petId}': {
            parameters: [
              {
                name: 'petId',
                in: 'path',
                description: 'ID of pet to return',
                required: true,
              },
            ],
            get: {
              parameters: [
                {
                  name: 'petId',
                  in: 'path',
                  description: 'A comma-separated list of pet IDs',
                  required: true,
                },
              ],
            },
          },
        },
      });

      expect(
        oas.operation('/pet/{petId}', 'get').getParametersAsJsonSchema()[0].schema.properties.petId.description
      ).toBe('A comma-separated list of pet IDs');
    });

    it('should add common parameter to path params', () => {
      const oas = new Oas({
        paths: {
          '/pet/{petId}': {
            parameters: [
              {
                name: 'petId',
                in: 'path',
                description: 'ID of pet to return',
                required: true,
              },
            ],
            get: {},
          },
        },
      });

      const operation = oas.operation('/pet/{petId}', 'get');

      expect(operation.getParametersAsJsonSchema()[0].schema.properties.petId.description).toBe(
        oas.paths['/pet/{petId}'].parameters[0].description
      );
    });

    it('should handle a common parameter dereferenced $ref to path params', async () => {
      const oas = new Oas({
        paths: {
          '/pet/{petId}': {
            parameters: [
              {
                $ref: '#/components/parameters/petId',
              },
            ],
            get: {},
          },
        },
        components: {
          parameters: {
            petId: {
              name: 'petId',
              in: 'path',
              description: 'ID of pet to return',
              required: true,
            },
          },
        },
      });

      await oas.dereference();

      expect(
        oas.operation('/pet/{petId}', 'get').getParametersAsJsonSchema()[0].schema.properties.petId.description
      ).toBe(oas.components.parameters.petId.description);
    });
  });
});

describe('request bodies', () => {
  it('should convert request bodies to JSON schema (application/json)', async () => {
    const oas = new Oas(petstore);
    await oas.dereference();

    const operation = oas.operation('/pet', 'post');
    expect(operation.getParametersAsJsonSchema()).toMatchSnapshot();
  });

  it('should convert request bodies to JSON schema (application/x-www-form-urlencoded)', async () => {
    const oas = new Oas(petstoreServerVars);
    await oas.dereference();

    const operation = oas.operation('/pet/{petId}', 'post');
    expect(operation.getParametersAsJsonSchema()).toMatchSnapshot();
  });

  it('should not return anything for an empty schema', () => {
    const oas = createOas({
      requestBody: {
        description: 'Body description',
        content: {
          'application/json': {
            schema: {},
          },
        },
      },
    });

    expect(oas.operation('/', 'get').getParametersAsJsonSchema()).toStrictEqual([]);
  });
});

describe('type', () => {
  describe('request bodies', () => {
    describe('repair invalid schema that has no `type`', () => {
      it('should not add a string type on a `requestBody` and component schema that are clearly objects', () => {
        const oas = createOas(
          {
            requestBody: {
              content: {
                'application/json': {
                  schema: {
                    properties: {
                      uri: {
                        type: 'string',
                        format: 'uri',
                      },
                    },
                  },
                },
              },
            },
          },
          {
            schemas: {
              ErrorResponse: {
                properties: {
                  message: {
                    type: 'string',
                  },
                },
              },
              NewUser: {
                required: ['user_id'],
                properties: {
                  user_id: {
                    type: 'integer',
                  },
                },
              },
            },
          }
        );

        const schema = oas.operation('/', 'get').getParametersAsJsonSchema();

        expect(schema[0].schema.components.schemas.ErrorResponse.type).toBe('object');
        expect(schema[0].schema.components.schemas.NewUser.type).toBe('object');
      });
    });
  });
});

describe('descriptions', () => {
  it.todo('should pass through description on requestBody');

  it('should pass through description on parameters', () => {
    const oas = createOas({
      parameters: [
        {
          in: 'header',
          name: 'Accept',
          description: 'Expected response format.',
          schema: {
            type: 'string',
          },
        },
      ],
    });

    expect(oas.operation('/', 'get').getParametersAsJsonSchema()).toStrictEqual([
      {
        label: 'Headers',
        type: 'header',
        schema: {
          type: 'object',
          properties: {
            Accept: {
              description: 'Expected response format.',
              type: 'string',
            },
          },
          required: [],
        },
      },
    ]);
  });

  it('should pass through description on parameter when referenced as a `$ref` and a `requestBody` is present', async () => {
    const oas = createOas(
      {
        parameters: [
          {
            $ref: '#/components/parameters/pathId',
          },
        ],
        requestBody: {
          content: {
            'application/json': {
              schema: {
                type: 'object',
              },
            },
          },
        },
      },
      {
        parameters: {
          pathId: {
            name: 'pathId',
            in: 'path',
            description: 'Description for the pathId',
            required: true,
            schema: {
              type: 'integer',
              format: 'uint32',
            },
          },
        },
      }
    );

    await oas.dereference();

    expect(oas.operation('/', 'get').getParametersAsJsonSchema()[0].schema).toStrictEqual({
      type: 'object',
      properties: {
        pathId: {
          type: 'integer',
          format: 'uint32',
          description: 'Description for the pathId',
        },
      },
      required: ['pathId'],
    });
  });
});

describe('required', () => {
  it.todo('should pass through `required` on parameters');

  it.todo('should make things required correctly for request bodies');
});

describe('`globalDefaults` option', () => {
  it('should use user defined `globalDefaults` for requestBody', async () => {
    const schema = new Oas(petstore);
    await schema.dereference();
    const operation = schema.operation('/pet', 'post');
    const jwtDefaults = {
      category: {
        id: 4,
        name: 'Testing',
      },
    };

    const jsonSchema = operation.getParametersAsJsonSchema(jwtDefaults);
    expect(jsonSchema[0].schema.properties.category.default).toStrictEqual(jwtDefaults.category);
  });

  it('should use user defined `globalDefaults` for parameters', async () => {
    const schema = new Oas(petstore);
    await schema.dereference();
    const operation = schema.operation('/pet/{petId}', 'get');
    const jwtDefaults = {
      petId: 1,
    };

    const jsonSchema = operation.getParametersAsJsonSchema(jwtDefaults);
    expect(jsonSchema[0].schema.properties.petId.default).toStrictEqual(jwtDefaults.petId);
  });
});
