// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parameters should convert parameters to JSON schema 1`] = `
Array [
  Object {
    "label": "Path Params",
    "schema": Object {
      "properties": Object {
        "petId": Object {
          "description": "Pet id to delete",
          "format": "int64",
          "type": "integer",
        },
      },
      "required": Array [
        "petId",
      ],
      "type": "object",
    },
    "type": "path",
  },
  Object {
    "label": "Headers",
    "schema": Object {
      "properties": Object {
        "api_key": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`request bodies should convert request bodies to JSON schema (application/json) 1`] = `
Array [
  Object {
    "label": "Body Params",
    "schema": Object {
      "components": Object {
        "requestBodies": Object {
          "Pet": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "category": Object {
                      "properties": Object {
                        "id": Object {
                          "format": "int64",
                          "type": "integer",
                        },
                        "name": Object {
                          "type": "string",
                        },
                      },
                      "type": "object",
                      "xml": Object {
                        "name": "Category",
                      },
                    },
                    "id": Object {
                      "format": "int64",
                      "readOnly": true,
                      "type": "integer",
                    },
                    "name": Object {
                      "example": "doggie",
                      "type": "string",
                    },
                    "photoUrls": Object {
                      "items": Object {
                        "type": "string",
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "photoUrl",
                        "wrapped": true,
                      },
                    },
                    "status": Object {
                      "description": "pet status in the store",
                      "enum": Array [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "type": "string",
                    },
                    "tags": Object {
                      "items": Object {
                        "properties": Object {
                          "id": Object {
                            "format": "int64",
                            "type": "integer",
                          },
                          "name": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                        "xml": Object {
                          "name": "Tag",
                        },
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "tag",
                        "wrapped": true,
                      },
                    },
                  },
                  "required": Array [
                    "name",
                    "photoUrls",
                  ],
                  "type": "object",
                  "xml": Object {
                    "name": "Pet",
                  },
                },
              },
              "application/xml": Object {
                "schema": Object {
                  "properties": Object {
                    "category": Object {
                      "properties": Object {
                        "id": Object {
                          "format": "int64",
                          "type": "integer",
                        },
                        "name": Object {
                          "type": "string",
                        },
                      },
                      "type": "object",
                      "xml": Object {
                        "name": "Category",
                      },
                    },
                    "id": Object {
                      "format": "int64",
                      "readOnly": true,
                      "type": "integer",
                    },
                    "name": Object {
                      "example": "doggie",
                      "type": "string",
                    },
                    "photoUrls": Object {
                      "items": Object {
                        "type": "string",
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "photoUrl",
                        "wrapped": true,
                      },
                    },
                    "status": Object {
                      "description": "pet status in the store",
                      "enum": Array [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "type": "string",
                    },
                    "tags": Object {
                      "items": Object {
                        "properties": Object {
                          "id": Object {
                            "format": "int64",
                            "type": "integer",
                          },
                          "name": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                        "xml": Object {
                          "name": "Tag",
                        },
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "tag",
                        "wrapped": true,
                      },
                    },
                  },
                  "required": Array [
                    "name",
                    "photoUrls",
                  ],
                  "type": "object",
                  "xml": Object {
                    "name": "Pet",
                  },
                },
              },
            },
            "description": "Pet object that needs to be added to the store",
            "required": true,
          },
          "UserArray": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "items": Object {
                    "properties": Object {
                      "email": Object {
                        "type": "string",
                      },
                      "firstName": Object {
                        "type": "string",
                      },
                      "id": Object {
                        "format": "int64",
                        "type": "integer",
                      },
                      "lastName": Object {
                        "type": "string",
                      },
                      "password": Object {
                        "type": "string",
                      },
                      "phone": Object {
                        "type": "string",
                      },
                      "userStatus": Object {
                        "description": "User Status",
                        "format": "int32",
                        "type": "integer",
                      },
                      "username": Object {
                        "type": "string",
                      },
                    },
                    "type": "object",
                    "xml": Object {
                      "name": "User",
                    },
                  },
                  "type": "array",
                },
              },
            },
            "description": "List of user object",
            "required": true,
          },
        },
        "schemas": Object {
          "ApiResponse": Object {
            "properties": Object {
              "code": Object {
                "format": "int32",
                "type": "integer",
              },
              "message": Object {
                "type": "string",
              },
              "type": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "Category": Object {
            "properties": Object {
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "name": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "Order": Object {
            "properties": Object {
              "complete": Object {
                "default": false,
                "type": "boolean",
              },
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "petId": Object {
                "format": "int64",
                "type": "integer",
              },
              "quantity": Object {
                "format": "int32",
                "type": "integer",
              },
              "shipDate": Object {
                "format": "date-time",
                "type": "string",
              },
              "status": Object {
                "description": "Order Status",
                "enum": Array [
                  "placed",
                  "approved",
                  "delivered",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
          "Pet": Object {
            "properties": Object {
              "category": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "id": Object {
                "format": "int64",
                "readOnly": true,
                "type": "integer",
              },
              "name": Object {
                "examples": Array [
                  "doggie",
                ],
                "type": "string",
              },
              "photoUrls": Object {
                "items": Object {
                  "type": "string",
                },
                "type": "array",
              },
              "status": Object {
                "description": "pet status in the store",
                "enum": Array [
                  "available",
                  "pending",
                  "sold",
                ],
                "type": "string",
              },
              "tags": Object {
                "items": Object {
                  "properties": Object {
                    "id": Object {
                      "format": "int64",
                      "type": "integer",
                    },
                    "name": Object {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
            "required": Array [
              "name",
              "photoUrls",
            ],
            "type": "object",
          },
          "Tag": Object {
            "properties": Object {
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "name": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "User": Object {
            "properties": Object {
              "email": Object {
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "lastName": Object {
                "type": "string",
              },
              "password": Object {
                "type": "string",
              },
              "phone": Object {
                "type": "string",
              },
              "userStatus": Object {
                "description": "User Status",
                "format": "int32",
                "type": "integer",
              },
              "username": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "securitySchemes": Object {
          "api_key": Object {
            "in": "header",
            "name": "api_key",
            "type": "apiKey",
          },
          "petstore_auth": Object {
            "flows": Object {
              "implicit": Object {
                "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
                "scopes": Object {
                  "read:pets": "read your pets",
                  "write:pets": "modify pets in your account",
                },
              },
            },
            "type": "oauth2",
          },
        },
      },
      "properties": Object {
        "category": Object {
          "properties": Object {
            "id": Object {
              "format": "int64",
              "type": "integer",
            },
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
        "id": Object {
          "format": "int64",
          "readOnly": true,
          "type": "integer",
        },
        "name": Object {
          "examples": Array [
            "doggie",
          ],
          "type": "string",
        },
        "photoUrls": Object {
          "items": Object {
            "type": "string",
          },
          "type": "array",
        },
        "status": Object {
          "description": "pet status in the store",
          "enum": Array [
            "available",
            "pending",
            "sold",
          ],
          "type": "string",
        },
        "tags": Object {
          "items": Object {
            "properties": Object {
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "name": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "type": "array",
        },
      },
      "required": Array [
        "name",
        "photoUrls",
      ],
      "type": "object",
    },
    "type": "body",
  },
]
`;

exports[`request bodies should convert request bodies to JSON schema (application/x-www-form-urlencoded) 1`] = `
Array [
  Object {
    "label": "Path Params",
    "schema": Object {
      "properties": Object {
        "petId": Object {
          "description": "ID of pet that needs to be updated",
          "format": "int64",
          "type": "integer",
        },
      },
      "required": Array [
        "petId",
      ],
      "type": "object",
    },
    "type": "path",
  },
  Object {
    "label": "Form Data",
    "schema": Object {
      "components": Object {
        "requestBodies": Object {
          "Pet": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "properties": Object {
                    "category": Object {
                      "properties": Object {
                        "id": Object {
                          "format": "int64",
                          "type": "integer",
                        },
                        "name": Object {
                          "type": "string",
                        },
                      },
                      "type": "object",
                      "xml": Object {
                        "name": "Category",
                      },
                    },
                    "id": Object {
                      "format": "int64",
                      "type": "integer",
                    },
                    "name": Object {
                      "example": "doggie",
                      "type": "string",
                    },
                    "photoUrls": Object {
                      "items": Object {
                        "type": "string",
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "photoUrl",
                        "wrapped": true,
                      },
                    },
                    "status": Object {
                      "description": "pet status in the store",
                      "enum": Array [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "type": "string",
                    },
                    "tags": Object {
                      "items": Object {
                        "properties": Object {
                          "id": Object {
                            "format": "int64",
                            "type": "integer",
                          },
                          "name": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                        "xml": Object {
                          "name": "Tag",
                        },
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "tag",
                        "wrapped": true,
                      },
                    },
                  },
                  "required": Array [
                    "name",
                    "photoUrls",
                  ],
                  "type": "object",
                  "xml": Object {
                    "name": "Pet",
                  },
                },
              },
              "application/xml": Object {
                "schema": Object {
                  "properties": Object {
                    "category": Object {
                      "properties": Object {
                        "id": Object {
                          "format": "int64",
                          "type": "integer",
                        },
                        "name": Object {
                          "type": "string",
                        },
                      },
                      "type": "object",
                      "xml": Object {
                        "name": "Category",
                      },
                    },
                    "id": Object {
                      "format": "int64",
                      "type": "integer",
                    },
                    "name": Object {
                      "example": "doggie",
                      "type": "string",
                    },
                    "photoUrls": Object {
                      "items": Object {
                        "type": "string",
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "photoUrl",
                        "wrapped": true,
                      },
                    },
                    "status": Object {
                      "description": "pet status in the store",
                      "enum": Array [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "type": "string",
                    },
                    "tags": Object {
                      "items": Object {
                        "properties": Object {
                          "id": Object {
                            "format": "int64",
                            "type": "integer",
                          },
                          "name": Object {
                            "type": "string",
                          },
                        },
                        "type": "object",
                        "xml": Object {
                          "name": "Tag",
                        },
                      },
                      "type": "array",
                      "xml": Object {
                        "name": "tag",
                        "wrapped": true,
                      },
                    },
                  },
                  "required": Array [
                    "name",
                    "photoUrls",
                  ],
                  "type": "object",
                  "xml": Object {
                    "name": "Pet",
                  },
                },
              },
            },
            "description": "Pet object that needs to be added to the store",
            "required": true,
          },
          "UserArray": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "items": Object {
                    "properties": Object {
                      "email": Object {
                        "type": "string",
                      },
                      "firstName": Object {
                        "type": "string",
                      },
                      "id": Object {
                        "format": "int64",
                        "type": "integer",
                      },
                      "lastName": Object {
                        "type": "string",
                      },
                      "password": Object {
                        "type": "string",
                      },
                      "phone": Object {
                        "type": "string",
                      },
                      "userStatus": Object {
                        "description": "User Status",
                        "format": "int32",
                        "type": "integer",
                      },
                      "username": Object {
                        "type": "string",
                      },
                    },
                    "type": "object",
                    "xml": Object {
                      "name": "User",
                    },
                  },
                  "type": "array",
                },
              },
            },
            "description": "List of user object",
            "required": true,
          },
        },
        "schemas": Object {
          "ApiResponse": Object {
            "properties": Object {
              "code": Object {
                "format": "int32",
                "type": "integer",
              },
              "message": Object {
                "type": "string",
              },
              "type": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "Category": Object {
            "properties": Object {
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "name": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "Order": Object {
            "properties": Object {
              "complete": Object {
                "default": false,
                "type": "boolean",
              },
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "petId": Object {
                "format": "int64",
                "type": "integer",
              },
              "quantity": Object {
                "format": "int32",
                "type": "integer",
              },
              "shipDate": Object {
                "format": "date-time",
                "type": "string",
              },
              "status": Object {
                "description": "Order Status",
                "enum": Array [
                  "placed",
                  "approved",
                  "delivered",
                ],
                "type": "string",
              },
            },
            "type": "object",
          },
          "Pet": Object {
            "properties": Object {
              "category": Object {
                "properties": Object {
                  "id": Object {
                    "format": "int64",
                    "type": "integer",
                  },
                  "name": Object {
                    "type": "string",
                  },
                },
                "type": "object",
              },
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "name": Object {
                "examples": Array [
                  "doggie",
                ],
                "type": "string",
              },
              "photoUrls": Object {
                "items": Object {
                  "type": "string",
                },
                "type": "array",
              },
              "status": Object {
                "description": "pet status in the store",
                "enum": Array [
                  "available",
                  "pending",
                  "sold",
                ],
                "type": "string",
              },
              "tags": Object {
                "items": Object {
                  "properties": Object {
                    "id": Object {
                      "format": "int64",
                      "type": "integer",
                    },
                    "name": Object {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
            "required": Array [
              "name",
              "photoUrls",
            ],
            "type": "object",
          },
          "Tag": Object {
            "properties": Object {
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "name": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
          "User": Object {
            "properties": Object {
              "email": Object {
                "type": "string",
              },
              "firstName": Object {
                "type": "string",
              },
              "id": Object {
                "format": "int64",
                "type": "integer",
              },
              "lastName": Object {
                "type": "string",
              },
              "password": Object {
                "type": "string",
              },
              "phone": Object {
                "type": "string",
              },
              "userStatus": Object {
                "description": "User Status",
                "format": "int32",
                "type": "integer",
              },
              "username": Object {
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "securitySchemes": Object {
          "api_key": Object {
            "in": "header",
            "name": "api_key",
            "type": "apiKey",
          },
          "petstore_auth": Object {
            "flows": Object {
              "implicit": Object {
                "authorizationUrl": "http://petstore.swagger.io/oauth/dialog",
                "scopes": Object {
                  "read:pets": "read your pets",
                  "write:pets": "modify pets in your account",
                },
              },
            },
            "type": "oauth2",
          },
        },
      },
      "properties": Object {
        "name": Object {
          "description": "Updated name of the pet",
          "type": "string",
        },
        "status": Object {
          "description": "Updated status of the pet",
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "formData",
  },
]
`;

exports[`type sorting should return with a json schema for each parameter type (body instead of formData) 1`] = `
Array [
  Object {
    "label": "Path Params",
    "schema": Object {
      "properties": Object {
        "path parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "path",
  },
  Object {
    "label": "Query Params",
    "schema": Object {
      "properties": Object {
        "query parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "query",
  },
  Object {
    "label": "Body Params",
    "schema": Object {
      "properties": Object {
        "a": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "body",
  },
  Object {
    "label": "Cookie Params",
    "schema": Object {
      "properties": Object {
        "cookie parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "cookie",
  },
  Object {
    "label": "Headers",
    "schema": Object {
      "properties": Object {
        "header parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "header",
  },
]
`;

exports[`type sorting should return with a json schema for each parameter type (formData instead of body) 1`] = `
Array [
  Object {
    "label": "Path Params",
    "schema": Object {
      "properties": Object {
        "path parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "path",
  },
  Object {
    "label": "Query Params",
    "schema": Object {
      "properties": Object {
        "query parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "query",
  },
  Object {
    "label": "Cookie Params",
    "schema": Object {
      "properties": Object {
        "cookie parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "cookie",
  },
  Object {
    "label": "Form Data",
    "schema": Object {
      "properties": Object {
        "a": Object {
          "type": "string",
        },
      },
      "type": "object",
    },
    "type": "formData",
  },
  Object {
    "label": "Headers",
    "schema": Object {
      "properties": Object {
        "header parameter": Object {
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "type": "header",
  },
]
`;
